View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031816 | Open CASCADE | OCCT:Visualization | public | 2020-10-01 14:58 | 2020-12-02 17:13 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031816: Data Exchange - RWMesh_MaterialMap::CopyTexture() copies glb file instead of a texture inside it | ||||
Description | RWMesh_MaterialMap::CopyTexture() copies entire glb file instead of a texture in it defined by offset leading to broken output. | ||||
Tags | No tags attached. | ||||
Test case number | de_mesh/gltf_write/lantern | ||||
|
Branch CR31816 has been created by kgv. SHA-1: d6123c5451db0970c6d194614375aa56144896d7 Detailed log of new commits: Author: kgv Date: Thu Oct 1 15:07:46 2020 +0300 0031816: Data Exchange - RWMesh_MaterialMap::CopyTexture() copies glb file instead of a texture inside it Image_Texture is now checked if it defines an additional offset within the file to avoided copying an old glb file with embedded image files instead of extracting them. |
|
Patch is ready for review - OCCT branch: CR31816. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31816-master-KGV/ |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2020-10-02 master SHA - 6522304c17181a09fa831c040219d611dc44b94a a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-10-02 SHA - d9c364e1137eed3249e5a05befa860c708f243c0 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18085.050000000083 / 18057.60000000009 [+0.15%] Products Total CPU difference: 12174.620000000117 / 12124.200000000114 [+0.42%] Windows-64-VC14: OCCT Total CPU difference: 19713.125 / 19772.65625 [-0.30%] Products Total CPU difference: 13533.8125 / 13527.921875 [+0.04%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31816 has been deleted by inv. SHA-1: d6123c5451db0970c6d194614375aa56144896d7 |
occt: master dba98873 2020-10-01 12:07:46 Committer: bugmaster Details Diff |
0031816: Data Exchange - RWMesh_MaterialMap::CopyTexture() copies glb file instead of a texture inside it Image_Texture is now checked if it defines an additional offset within the file to avoided copying an old glb file with embedded image files instead of extracting them. |
Affected Issues 0031816 |
|
mod - src/RWMesh/RWMesh_MaterialMap.cxx | Diff File | ||
add - tests/de_mesh/gltf_write/lantern | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-10-01 14:58 | kgv | New Issue | |
2020-10-01 14:58 | kgv | Assigned To | => kgv |
2020-10-01 15:04 | git | Note Added: 0095526 | |
2020-10-01 15:09 | kgv | Relationship added | child of 0030953 |
2020-10-01 15:09 | kgv | Product Version | 7.4.0 => 7.5.0 |
2020-10-01 18:05 | kgv | Note Added: 0095539 | |
2020-10-01 18:05 | kgv | Assigned To | kgv => osa |
2020-10-01 18:05 | kgv | Status | new => resolved |
2020-10-02 10:16 |
|
Note Added: 0095551 | |
2020-10-02 10:16 |
|
Assigned To | osa => bugmaster |
2020-10-02 10:16 |
|
Status | resolved => reviewed |
2020-10-03 12:55 | bugmaster | Test case number | => de_mesh/gltf_write/lantern |
2020-10-03 14:03 | bugmaster | Note Added: 0095631 | |
2020-10-03 14:03 | bugmaster | Status | reviewed => tested |
2020-10-03 14:05 | bugmaster | Changeset attached | => occt master dba98873 |
2020-10-03 14:05 | bugmaster | Status | tested => verified |
2020-10-03 14:05 | bugmaster | Resolution | open => fixed |
2020-10-03 14:38 | git | Note Added: 0095647 | |
2020-12-02 16:44 |
|
Fixed in Version | => 7.5.0 |
2020-12-02 17:13 |
|
Status | verified => closed |